--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Minishop - Free Bootstrap 4 Template by Colorlib</title>
+    <title>A2HUB</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+
+	<link rel="icon" type="image/x-icon" href="images/logo/favicon.ico">
   </head>
   <body class="goto-here">
 		<div class="py-1 bg-black">
@@ -41,7 +43,7 @@
 						    <span class="text">elettila2hub@email.com</span>
 					    </div>
 					    <div class="col-md-5 pr-4 d-flex topper align-items-center text-lg-right">
-						    <span class="text">3-5 Business days delivery &amp; Free Returns</span>
+						    <span class="text">Full days Free delivery &amp; Free Returns</span>
 					    </div>
 				    </div>
 			    </div>
@@ -496,7 +498,7 @@
     			</div>
     			<div class="col-md-6">
     				<div class="heading-section heading-section-white">
-    					<span class="subheading">Deal of the month</span>
+    					<span class="subheading">Deal of A2HUB</span>
 	            <h2 class="mb-3">Deal of the month</h2>
 	          </div>
     				<div id="timer" class="d-flex mb-4">
@@ -507,7 +509,7 @@
 						</div>
 						<div class="text-deal">
 							<h2><a href="#">Nike Free RN 2019 iD</a></h2>
-							<p class="price"><span class="mr-2 price-dc">$120.00</span><span class="price-sale">$80.00</span></p>
+							<p class="price"><span class="mr-2 price-dc">₹ 1200.00</span><span class="price-sale">₹ 800.00</span></p>
 							<ul class="thumb-deal d-flex mt-4">
 								<li class="img" style="background-image: url(images/product-6.png);"></li>
 								<li class="img" style="background-image: url(images/product-2.png);"></li>
@@ -529,8 +531,8 @@
         					<span class="flaticon-bag"></span>
         				</div>
         				<div class="text">
-	        				<h3>Free Shipping</h3>
-	        				<p class="mb-0">Separated they live in. A small river named Duden flows</p>
+	        				<h3>Premium Quality</h3>
+	        				<p class="mb-0">Crafted from the finest fabrics to ensure comfort, durability, and timeless style.</p>
         				</div>
         			</div>
         			<div class="services-2 p-4 d-flex ftco-animate">
@@ -538,8 +540,8 @@
         					<span class="flaticon-heart-box"></span>
         				</div>
         				<div class="text">
-	        				<h3>Valuable Gifts</h3>
-	        				<p class="mb-0">Separated they live in. A small river named Duden flows</p>
+	        				<h3>Latest Trends</h3>
+	        				<p class="mb-0">Stay ahead in fashion with our handpicked, trendsetting collections for every season.</p>
 	        			</div>
         			</div>
         			<div class="services-2 p-4 d-flex ftco-animate">
@@ -547,8 +549,8 @@
         					<span class="flaticon-payment-security"></span>
         				</div>
         				<div class="text">
-	        				<h3>All Day Support</h3>
-	        				<p class="mb-0">Separated they live in. A small river named Duden flows</p>
+	        				<h3>Fashion that Fits</h3>
+	        				<p class="mb-0">From slim to relaxed, find the perfect fit for your body and style.</p>
 	        			</div>
         			</div>
         			<div class="services-2 p-4 d-flex ftco-animate">
@@ -556,8 +558,8 @@
         					<span class="flaticon-customer-service"></span>
         				</div>
         				<div class="text">
-	        				<h3>All Day Support</h3>
-	        				<p class="mb-0">Separated they live in. A small river named Duden flows</p>
+	        				<h3>Weekend Ready Looks</h3>
+	        				<p class="mb-0">From casual to classy—we’ve got your weekend wardrobe covered.</p>
 	        			</div>
         			</div>
         		</div>
@@ -565,76 +567,76 @@
           <div class="col-lg-7">
           	<div class="heading-section ftco-animate mb-5">
 	            <h2 class="mb-4">Our satisfied customer says</h2>
-	            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in</p>
+	            <p>was blown away by the quality and fit of the clothes. It’s rare to find such stylish options with this level of comfort. Definitely my go-to store now!</p>
 	          </div>
             <div class="carousel-testimony owl-carousel">
               <div class="item">
                 <div class="testimony-wrap">
+                  <div class="user-img mb-4" style="background-image: url(images/customer/cstmr3.jpeg)">
+                    <span class="quote d-flex align-items-center justify-content-center">
+                      <i class="icon-quote-left"></i>
+                    </span>
+                  </div>
+                  <div class="text">
+                    <p class="mb-4 pl-4 line">Every time I wear something from here, I get compliments. The fit, the fabric—everything’s just right!</p>
+                    <p class="name">YADHU MOHANAN</p>
+                    <span class="position">A2HUB Customer</span>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="testimony-wrap">
+                  <div class="user-img mb-4" style="background-image: url(images/customer/ctmr.jpeg)">
+                    <span class="quote d-flex align-items-center justify-content-center">
+                      <i class="icon-quote-left"></i>
+                    </span>
+                  </div>
+                  <div class="text">
+                    <p class="mb-4 pl-4 line">Finally found a store that understands men’s fashion. Everything I’ve ordered has been spot-on!</p>
+                    <p class="name">ARHAAN</p>
+                    <span class="position">A2HUB Customer</span>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="testimony-wrap">
+                  <div class="user-img mb-4" style="background-image: url(images/customer/cstmr1.jpeg)">
+                    <span class="quote d-flex align-items-center justify-content-center">
+                      <i class="icon-quote-left"></i>
+                    </span>
+                  </div>
+                  <div class="text">
+                    <p class="mb-4 pl-4 line">These clothes are stylish, comfortable, and built to last. I’m a repeat customer for a reason!</p>
+                    <p class="name">ANADHU</p>
+                    <span class="position">A2HUB Customer</span>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="testimony-wrap">
+                  <div class="user-img mb-4" style="background-image: url(images/customer/cstmr2.jpeg)">
+                    <span class="quote d-flex align-items-center justify-content-center">
+                      <i class="icon-quote-left"></i>
+                    </span>
+                  </div>
+                  <div class="text">
+                    <p class="mb-4 pl-4 line">The jeans I got are my new favorite. Perfect fit, great stretch, and they look amazing.</p>
+                    <p class="name">ABI</p>
+                    <span class="position">A2HUB Customer</span>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="testimony-wrap">
                   <div class="user-img mb-4" style="background-image: url(images/person_1.jpg)">
                     <span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
                   </div>
                   <div class="text">
-                    <p class="mb-4 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4 pl-4 line">I was skeptical at first, but now I’m hooked. Great clothes at great prices!"</p>
                     <p class="name">Garreth Smith</p>
-                    <span class="position">Marketing Manager</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap">
-                  <div class="user-img mb-4" style="background-image: url(images/person_2.jpg)">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text">
-                    <p class="mb-4 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
-                    <span class="position">Interface Designer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap">
-                  <div class="user-img mb-4" style="background-image: url(images/person_3.jpg)">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text">
-                    <p class="mb-4 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
-                    <span class="position">UI Designer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap">
-                  <div class="user-img mb-4" style="background-image: url(images/person_1.jpg)">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text">
-                    <p class="mb-4 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
-                    <span class="position">Web Developer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap">
-                  <div class="user-img mb-4" style="background-image: url(images/person_1.jpg)">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text">
-                    <p class="mb-4 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
-                    <span class="position">System Analyst</span>
+                    <span class="position">A2HUB Customer</span>
                   </div>
                 </div>
               </div>
@@ -714,7 +716,8 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Minishop</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
+              <p>Step into A2HUB – Your Destination for Modern Menswear.
+				From casual looks to sharp formals, we’ve got your wardrobe covered.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -755,9 +758,9 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">A2HUB, Elettil, Kozhikode, Kerala, India, Pin- 673572</span></li><br>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 9495990089</span></a></li><br>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">elettila2hub@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -767,7 +770,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+						  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved <a href="" target="_blank">A2HUB</a>
 						  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 						</p>
           </div>
